--- a/_posts/blog/2013-09-27-weixin-ue.md
+++ b/_posts/blog/2013-09-27-weixin-ue.md
@@ -24,7 +24,7 @@ category: blog
 
 QQ邮箱的首页中间长期放置着微信的广告，其中有一幅令人尤为印象深刻：五彩斑斓的霓虹前，标语“微信，是一个生活方式”个性十足。这给很多潜在用户留下了良好的印象，容易与人们在城市繁华下的精神情感产生共鸣。在营销推广中树立起正面形象，这种还未使用就给人留下良好影响的`预体验`也是用户体验的一部分。
 
-![WeChat](/images/wechat1.jpg)
+![WeChat](/images/weixinue/wechat1.jpg)
 
 “好吧，那我为什么不试试微信呢？”潜在用户想。
 
@@ -34,7 +34,7 @@ QQ邮箱的首页中间长期放置着微信的广告，其中有一幅令人尤
 
 “OK！我要开始聊天了！”用户发出了第一条消息，“嗯，这个聊天背景有点单调，我是个注重品味的人，这样单一颜色的背景太单调了。”于是，微信加入了自定义聊天背景的功能，这有助于营造不同用户中意的聊天氛围，改善了用户体验。自定义相册背景也是如此。
 
-![WeChat](/images/wechat2.jpg)
+![WeChat](/images/weixinue/wechat2.jpg)
 
 微信有3个“招牌功能”：“附近的人”、“摇一摇”、“漂流瓶”（如图2）。当用户感到“偌大的城市，竟找不到可以倾诉的人”时，这3个功能用3种不同的方式为用户提供了解决方法。前2个功能都是典型的LBS(Location Based Service)。这3个功能纵向排列在“朋友们”选项卡内，并且正好排布在用户拇指正好可以顺手按下的屏幕位置，非常顺手。并且，它们都采用了“追求简单到极致”的思想（借鉴的IPhone？），界面简洁，风格一致，操作方便。
 
