--- a/_posts/ojproblem/2013-09-15-poj-1979-red-black.md
+++ b/_posts/ojproblem/2013-09-15-poj-1979-red-black.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: "[解题报告] POJ 1979 Red and Black"
+title: "POJ 1979 Red and Black"
 description: 这道题容易想到的是可以用深度优先搜索解决。
 category: OJ Problem
 ---
 
-##题目
+##题目链接
 
-题目链接：[POJ: Red and Black](http://poj.org/problem?id=1979)
+[POJ: Red and Black](http://poj.org/problem?id=1979)
 
 ##解决方法
 
