--- a/_posts/ue/2013-09-27-weixin-ue.md
+++ b/_posts/ue/2013-09-27-weixin-ue.md
@@ -3,6 +3,7 @@ layout: post
 title: 浅析微信产品体验
 description: 这是13年年初参加`第一届腾讯产品体验暑期征文`时写的文章了，当时微信还没有今天这么多功能，还没有推出游戏啦、支付啦、付费表情啦、更强大的“扫一扫”啦等等这些功能。当时觉得挺有意思的，自己第一次尝试从用户体验的角度来审视一款移动APP，并且形成文章。
 category: User Experience
+tag: [微信, 用户体验]
 ---
 
 ##前言
